# turas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE
cmake-etc/: TurasUtils.cmake
docs/: Async Asset Managet & GPU loading.drawio  Renderer Arch.drawio  Renderer shader hot reload.drawio
docs/turas/: LVK.md
docs/turas/.obsidian/: graph.json  workspace.json
docs/turas/Assets/: Asset Manager.md  Asset.md
docs/turas/ECS/: Scene.md
docs/turas/Notes/: CMake Shader Compilation.md  Explicit Linking.md
docs/turas/Rendering/: Pipeline.md  Renderer.md  Vector Graphics.md  View.md
docs/turas/Rendering/Papers & Articles/: Graphics Studies Website.md
docs/turas/Rendering/R&D/: Parallax Corrected Cubemaps.md  Radiance Cascades write up.md
shaders/: gbuffer-standard.frag  gbuffer-standard.frag.spv  gbuffer-standard.vert  gbuffer-standard.vert.spv  lightpass-standard.frag  lightpass-standard.frag.spv  screen-space-image.frag  screen-space-image.frag.spv  screen-space-uv.vert  screen-space-uv.vert.spv
turas/: CMakeLists.txt
turas-editor/: App.cpp  CMakeLists.txt  EditorEngine.cpp  EditorEngine.h  EditorMenu.cpp  EditorMenu.h
turas-shaders/: gbuffer-standard-diffuse-only.frag  gbuffer-standard.vert  lightpass-standard.frag  screen-space-uv.vert
turas-test/: CMakeLists.txt  test.cpp  test.h
turas-tests/: CMakeLists.txt  imgui_style_test.cpp  test.cpp  test.h
turas/include/Assets/: Asset.h  AssetManager.h
turas/include/Core/: ECS.h  Engine.h  FSM.h  Input.h  Log.h  Project.h  Scene.h  Serialization.h  System.h  Types.h  Utils.h
turas/include/Debug/: DebugWindows.h  Profile.h  StatsWindow.h
turas/include/Debug/FontBinaries/: dm_sans.ttf.h  icons_font_awesome.ttf.h  icons_kenney.ttf.h
turas/include/ECS/: Material.h  Mesh.h  Transform.h
turas/include/ImGui/: ImGuiExtensions.h
turas/include/Rendering/: Material.h  Mesh.h  Pipeline.h  Renderer.h  Shader.h  Texture.h  VertexLayouts.h  View.h  Viewport.h
turas/include/Rendering/Pipelines/: BuiltIn.h  Common.h
turas/include/STL/: Algorithm.h  Array.h  Chrono.h  FileSystem.h  Functional.h  Future.h  HashMap.h  HashSet.h  IO.h  Json.hpp  Map.h  Memory.h  Optional.h  Queue.h  Stack.h  String.h  Thread.h  TypeTraits.h  Util.h  Vector.h
turas/include/Systems/: Camera.h  EntityData.h  Lights.h  Material.h  Mesh.h  Transform.h
turas/src/Assets/: AssetManager.cpp
turas/src/Core/: ECS.cpp  Engine.cpp  FSM.cpp  ImGuiExtensions.cpp  Project.cpp  Scene.cpp  System.cpp  Utils.cpp
turas/src/Debug/: DebugWindows.cpp  StatsWindow.cpp
turas/src/ECS/: Material.cpp  Mesh.cpp  Transform.cpp
turas/src/Rendering/: Mesh.cpp  Pipeline.cpp  Renderer.cpp  VertexLayouts.cpp  View.cpp  Viewport.cpp
turas/src/Rendering/Pipelines/: BuiltIn.cpp  Common.cpp
turas/src/STL/: Memory.cpp
turas/src/Systems/: Camera.cpp  EntityData.cpp  Material.cpp  Mesh.cpp  Transform.cpp
